# QDD

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  CONTRIBUTING_ja.md  CTestTestfile.cmake  LICENSE.txt  Makefile  README.md  README_MPI.md  a.json  cache.hpp  chase_lev_queue.hpp  cmake_install.cmake  common.h  compile_commands.json  complex.cpp  complex.h  dd.cpp  dd.h  engine.cpp  engine.h  epoch.h  fixed_random  get_test_reqs.py  graph.cpp  graph.hpp  local_build.sh  local_build_and_test.sh  lockfree_hashmap.hpp  main.cpp  output  pyproject.toml  qiskit_random  queue.hpp  random_all_output  random_all_output2  random_output  (+5 more)
.github/workflows/: publish_to_pypi.yml  publish_to_pypi_ci.yml  test_on_pull_request.yml
3rdPartyLicense/: README.md
bench/: Grover.py  QuantumFactoring.py  QuantumVolume.py  README.md  Shor.py  VQE.py  pyproject.toml  qcbm_main.py  run_qasm.py  shor_main.py
docs/: ProductRequirementsDocument.md  fx1000.md
include/: cache.hpp  common.h  complex.hpp  complexnumbers.hpp  dd.h  epoch.h  graph.hpp  opcache.hpp  python_helper.hpp  table.hpp  task.h  wsq.hpp
include/algorithms/: grover.hpp  shor.hpp
qdd/: CMakeLists.txt  __init__.py  bindings.cpp  circuit_property.py  qdd_backend.py  qdd_estimator.py  qdd_estimator_like_aer.py  qdd_failed_job.py  qdd_gate.py  qdd_job.py  qdd_provider.py  qdd_sampler.py  qdd_sampler_like_aer.py  qdd_statevector_backend.py  qdd_sv_backend.py  qdd_utils.py
scripts/: a.sh  cmakeclean.sh  gates_test.py  get_test_reqs.py  local_build_and_test.sh  local_build_and_test_new.sh  local_pytest.sh  qml_output  run_clifford_experiments.sh  run_grover.sh  run_grover_experiments.sh  run_qml.sh  run_random.sh  run_shor_experiments.sh
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dd.cpp  epoch.cpp  graph.cpp  task.cpp
src/algorithms/: grover.cpp  shor.cpp  shor_update.cpp
test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  benchmark  clifford.cpp  cmake_install.cmake  compile_commands.json  fiber.cpp  fiber_shor.cpp  fiber_test  gc_test  main.cpp  mpi_qcbm.cpp  mpi_test.cpp  mpi_test_grover.cpp  qcbm.cpp  qdd_test  qdd_test[1]_include.cmake  qdd_test[1]_tests.cmake  qv15.cpp  serialization_test.cpp  shor.cpp  shor253  test.cpp  test_performance.cpp
test/python/: test_backend.py  test_basics.py  test_classical_condition.py  test_error.py  test_estimator.py  test_gate.py  test_mpi.py  test_provider.py  test_sampler.py  test_shor_circuit.py
test/python/helpers/: circuit_helper.py
test/python/qiskit_tutorials/advanced_circuits/: test_advanced_circuits.py  test_obtain_backend_information.py  test_operators.py  test_pulse.py  test_transpiler_passes_and_passmanager.py
test/python/qiskit_tutorials/algorithms/: test_algorithms_introduction.py  test_gradient_framework.py  test_grover.py  test_grover_examples.py  test_iqpe.py  test_qaoa.py  test_shor.py  test_vqe.py  test_vqe_advanced.py  test_vqe_advanced_options.py  test_vqe_convergence.py  test_vqe_with_noise.py
test/python/qiskit_tutorials/classical_simulators/: test_noise_simulation.py  test_simulators.py
test/python/qiskit_tutorials/finance/: test_amplitude_estimation.py  test_portofolio_optimization.py  test_qae.py
test/python/qiskit_tutorials/introductory/: test_qiskit_warmup.py
test/python/qiskit_tutorials/machine_learning/: test_neural_network_classifier_and_regressor.py  test_quantum_neural_network.py
test/python/qiskit_tutorials/nature/: test_electronic_structure.py  test_ground_state_solvers.py  test_vibrational_structure.py
test/python/qiskit_tutorials/operators/: test_gradient_framework.py  test_operator_flow.py
test/python/qiskit_tutorials/optimization/: test_minimum_eigen_optimizer.py
test/python/qiskit_tutorials/quantum_circuits/: test_circuit_basics.py  test_getting_started_with_qiskit.py  test_qiskit_visualization.py  test_summary_of_quantum_operations.py
test/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  qdd_test[1]_include.cmake  qdd_test[1]_tests.cmake
