[build-system]
requires = [
    "setuptools>=65.0",
]
build-backend = "setuptools.build_meta"



[project]
name = "qdd"
version = "0.1.0"
description = "Qiskit Provider for QDD"
authors = [{name = "Yusuke Kimura", email = "yusuke-kimura@fujitsu.com"}]
readme = "README.md"
requires-python = ">= 3.8, < 3.11"
license = {file = "LICENSE.txt"}

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

dependencies = [
    "qiskit-aer>=0.13.3",
]


# Specifies the path of the root directory
[tool.setuptools.packages.find]
where = [""]
# Excluding redundant directories
exclude = ["test", "scripts", "_deps", "test*", "test/*", "_deps*", "_deps/*"]

# Include .so to the wheel file. 
[tool.setuptools.package-data]
"qdd" = ["*.so"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
