[build-system]
requires = [
    "setuptools>=65.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "qdd"
version = "0.2.0"
description = "Qiskit Provider for QDD"
authors = [{name = "Yusuke Kimura", email = "yusuke-kimura@fujitsu.com"}]
readme = "README.md"
requires-python = ">= 3.8, < 3.11"
license = {file = "LICENSE.txt"}

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

dependencies = [
    "qiskit-aer>=0.13.3",
]

# This command, 'pip install {package-name}[test]',
# enables you to install the test dependencies along with the main dependencies
[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
    "qiskit-machine-learning[sparse]>=0.6.0",
    "qiskit-algorithms==0.3.0",
    "qiskit-finance>=0.4.0",
    "qiskit-ibm-runtime>=0.21.1",
    "qiskit-optimization>=0.6.0",
    "qiskit-nature[pyscf]>=0.7.2",
    "pybind11>=2.10.4",
]

# Specifies the path of the root directory
[tool.setuptools.packages.find]
where = [""]
# Excluding redundant directories
exclude = ["test", "scripts", "_deps", "test*", "test/*", "_deps*", "_deps/*"]

# Include .so to the wheel file.
[tool.setuptools.package-data]
"qdd" = ["*.so"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
test-extras = "test"
