[build-system]
requires = [
    "setuptools>=65.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "qdd"
version = "0.2.4"
description = "Qiskit Provider for QDD"
authors = [{name = "Yusuke Kimura", email = "yusuke-kimura@fujitsu.com"}]
readme = "README.md"
requires-python = ">= 3.8, < 3.13"
license = {file = "LICENSE.txt"}

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "qiskit~=1.2.0",
]

# This command, 'pip install {package-name}[test]',
# enables you to install the test dependencies along with the main dependencies
[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
    "qiskit-ibm-runtime>=0.21.1",
    "pybind11>=2.10.4",
    "qiskit-aer>=0.13.3",
]

# Specifies the path of the root directory
[tool.setuptools.packages.find]
where = [""]
# Excluding redundant directories
exclude = ["test", "scripts", "_deps", "test*", "test/*", "_deps*", "_deps/*"]

# Include .so to the wheel file.
[tool.setuptools.package-data]
"qdd" = ["*.so"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
test-extras = "test"

[tool.pytest.ini_options]
testpaths = [
    "test/python",
]
markers = [
    "slow: marks tests as taking a long time to run",
    "mpi: tests for MPI",
    "no_mpi_support: tests that do not support MPI execution",
]
addopts = "-m \"not slow and not mpi\" --strict-markers"
